<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Item">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout"
        >




        <ImageView
            android:id="@+id/itemPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/players_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_view"
            android:fontFamily="@font/nunito"
            android:padding="8dp"
            android:text="@string/players_string"
            android:textColor="@color/ternary_color"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_corner_view"
            android:fontFamily="@font/nunito"
            android:padding="8dp"
            android:text="@string/default_price"
            android:textColor="@color/ternary_color"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/higherBtn"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_marginBottom="104dp"
            android:alpha="0.6"
            android:backgroundTint="@color/higher_color"
            android:fontFamily="@font/nunito"
            android:text="@string/higher_string"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName"
            app:layout_constraintVertical_bias="0.954" />

        <Button
            android:id="@+id/lowerBtn"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:alpha="0.6"
            android:backgroundTint="@color/lower_color"
            android:fontFamily="@font/nunito"
            android:text="@string/lower_string"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/higherBtn"
            app:layout_constraintVertical_bias="0.16" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>